--- a/MATLAB codes/README
+++ b/MATLAB codes/README
@@ -1,1 +1,3 @@
-The file named "cell_3D_octahedron_10_10_21" is the main MATLAB code. When run, it accesses the other files, and simulates a cell. It produces a figure with the 3D structure of an astrocyte with and branches color-coded according to their branching level. The code also calculates cell measures (Sholl profile, number of branches, average branch lengths, etc, as specified in the line by line comments). The code creates up to P=7 primary branches. To change the number of primary branches, change the value of P accordingly, and comment out the unused branches.
+The file named "cell_3D_octahedron_10_10_21" is the main MATLAB code. When run, it accesses the other files, and generates the 3D geometry of an astrocyte, with leaves and branches color-coded according to their branching level. 
+The code also calculates a number of astrocyte measures (e.g., Sholl profile, number of branches, average branch lengths, as specified in the line by line comments). 
+The code creates up to P=7 primary branches. To change the number of primary branches, change the value of P accordingly, and comment out the unused branches.
