--- a/MATLAB codes/README
+++ b/MATLAB codes/README
@@ -1,3 +1,1 @@
-The file named "cell_3D_octahedron_10_10_21" is the main MATLAB code. When run, it accesses the other files, and generates the 3D geometry of an astrocyte, with leaves and branches color-coded according to their branching level. 
-The code also calculates a number of astrocyte measures (e.g., Sholl profile, number of branches, average branch lengths, as specified in the line by line comments). 
-The code creates up to P=7 primary branches. To change the number of primary branches, change the value of P accordingly, and comment out the unused branches.
+The file named "cell_3D_octahedron_10_10_21" is the main MATLAB code. When run, it accesses the other files, and generates the 3D geometry of an astrocyte, with leaves and branches color-coded according to their branching level. The code also calculates a number of astrocyte measures (e.g., Sholl profile, number of branches, average branch lengths, as specified in the line by line comments). The code creates up to P=7 primary branches. To change the number of primary branches, change the value of P accordingly, and comment out the unused branches. The code "plotting_average" can be used to record and plot the measures for each current cell, as well as track and plot the average over all simulations up to the current one. To record the results for each new cell, "plotting_average" needs to run immediately after running the main code for the respective cell; the simulation index j needs to be changed by hand according to the cell number, before running "plotting_average".
