--- a/CellBlender codes/README
+++ b/CellBlender codes/README
@@ -1,4 +1,1 @@
-These CellBlender codes are used to create 3D Monte Carlo reaction-diffusion models in which the surface density of glial glutamate transporters was varied between 0 and 20,000 um-2. 
-In these simulations, the walls of the world (the cube in which the simulation is run) are set as transparent. 
-Files whose name includes the suffix "_far" and "_close" refer to simulations in which the glutamate release site was located far or close with respect to the surrounding astrocyte sheet.
-The code can be run using Blender 2.79b and the add-on CellBlender  3.5.1.1, which can be downloaded as a bundle from this website (https://mcell.org/download.html).
+These CellBlender codes are used to create 3D Monte Carlo reaction-diffusion models in which the surface density of glial glutamate transporters was varied between 0 and 20,000 um-2. In these simulations, the walls of the world (the cube in which the simulation is run) are set as transparent. Files whose name includes the suffix "_far" and "_close" refer to simulations in which the glutamate release site was located far or close with respect to the surrounding astrocyte sheet. The code can be run using Blender 2.79b and the add-on CellBlender  3.5.1.1, which can be downloaded as a bundle from this website (https://mcell.org/download.html).
